# LR_1_parser

./: CMakeLists.txt  README.md
include/: grammar.h  item.h  parsing_table.h  state.h
src/: CMakeLists.txt  a.out  grammar.cpp  item.cpp  main.cpp  parsing_table.cpp  state.cpp
tests/: CMakeLists.txt  tests.cpp
